@@ -1,5 +1,5 @@
 AUX Makefile.patch 393 RMD160 f096153259031381ce65d9b15cd55c3bbcf4263e SHA1 c2ae5efa7f3edb89e7b813cc6bb7c907eec4b6ac SHA256 f02cfbad60f03cd8e0e638c71276184767167191a620db393dbb79337489d523
 DIST bmpanel-0.9.27.tar.gz 30638 RMD160 97198480c6c9084cb2b32d05c3ca021811353134 SHA1 c048fbea3eb4f3f70f1086e23c338cdee2dec0b6 SHA256 a6976d024800b878117161174cc6ca57b21b2462666e75111cdd32eea8464557
-EBUILD bmpanel-0.9.27-r1.ebuild 1304 RMD160 3749dea3442f017aa9de2d42d177a8b05fc29585 SHA1 72d88f153a6164673201ec96ff99e4e09a70c09c SHA256 a41487edf5dfa1566a94522e35223f0483ba2b8bb72c8ca6509470be7c2f4162
-MISC ChangeLog 904 RMD160 6cef680591f0103fdefbc1db84d8d4c7e3979375 SHA1 502f9fb554850f01336144e062a6dd179f626160 SHA256 906cd4038b66c3dbf6e7fa7389b3d0f18d1bfa7e6b9c50d0c08a0d2f2571cd4f
+EBUILD bmpanel-0.9.27-r1.ebuild 1330 RMD160 c3d59e68ded46709ab5fcf0170b5467a7be9dd00 SHA1 793224db37e7c702a524166f21eb5c10b6b705cb SHA256 c758a35f3803e0050528e8aa0f77f5645d066bbff629a9c63a0c2d4076247e33
+MISC ChangeLog 1039 RMD160 1f64f6f2978bc77eda66004a1af8298cfd95806d SHA1 23484fb39c5772ea47e2287d8f4a53d020bb4898 SHA256 d80035b3cd4444e4f945c9f87e1d01794c58c9e0a8afc7c0692105bba7f1b2ce
 MISC metadata.xml 318 RMD160 3c2ef6651b1c4a1bf23c445ddb0072e602baaaa5 SHA1 b596897d814c18a09420ee5662189b39be68f86e SHA256 4c9b660e1620b770980130fe40148b41c62f1d9886a3a8c6ef468034dd21b273
