@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  16 Feb 2009; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
+  bmpanel-0.9.27-r1.ebuild:
+  Add missing die, make DESCRIPTION a oneliner
+
   15 Feb 2009; Christian Ruppert (idl0r) <spooky85@gmail.com>
   -bmpanel-0.9.27.ebuild, +bmpanel-0.9.27-r1.ebuild, +files/Makefile.patch,
   -files/Makefile-no-strip.patch:
